--- a/hetao-file-io/pom.xml
+++ b/hetao-file-io/pom.xml
@@ -32,6 +32,12 @@
             <version>1.18.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
