--- a/store-io-server/pom.xml
+++ b/store-io-server/pom.xml
@@ -46,6 +46,12 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.45.Final</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 	<build>
